# playwrigth-prueba

./: .env  .gitignore  Function_Interfaces_in_Python_Function_interfaces_in_Python_can_be__by_Marcin_Kozak__TDS_Archive__Medium.txt  LICENSE  README.md  REQUISITOS_PRODUCTO.md  REQUISITOS_PRODUCTO_ARQUITECTURA.md  REQUISITOS_PRODUCTO_FUNCIONALES.md  REQUISITOS_PRODUCTO_HISTORIAS.md  REQUISITOS_PRODUCTO_IMPLEMENTACION.md  REQUISITOS_PRODUCTO_INTEGRACIONES.md  REQUISITOS_PRODUCTO_MAIN.md  REQUISITOS_PRODUCTO_METRICAS.md  REQUISITOS_PRODUCTO_MODELO_NEGOCIO.md  REQUISITOS_PRODUCTO_SEGURIDAD.md  analisis.md  cambios.md  fb.py  fbmk.py  main.py  mercado_libre_asinc.py  migrations._proxy.py  migrations.bat  principal.py  productos.db  pyproject.toml  sc01.py  scraper.py  scraper2.py  scraper4.py  todolist.md
.cursor/rules/: python-rule.mdc  scraping-rules.mdc
alembic_postgres/: alembic.ini
alembic_sqlite/: alembic.ini  env.py
config/: database.py
core/: scraper.py
models/: product.py
test/: test_scraper.py
utils/: logger.py
